Xoverflow fixed again again

--- a/public/stylesheets/body.css
+++ b/public/stylesheets/body.css
@@ -36,6 +36,8 @@
          flex-direction: column;
          justify-content:center;
          z-index:5;
+         margin-top: 10vh;
+       
             }        
 
              .TextBox{
@@ -62,6 +64,7 @@
          align-items: center;
          height: 50vh;
          z-index:4;
+   
         
         }
 
