--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -37,6 +37,7 @@ nav{
     min-height: 10vh ;
     z-index: 100;
     position: fixed;
+    top:0;
     width: 100%;
     
 
